--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,3 @@
-# ignore Apple's meta data files
-#
-.DS_Store
-
-# ignore KDE's meta-data files
-#
-.directory
-
-# ignore SVN files
-#
-.svn/
-*.svn
-
-# ignore vim swap files
-#
-*.swp
-
 # ignore the local bash scipts/settings file
 #
-.bash.d/*_local.bash
+.bash.d/*local.bash
