kitty: add more to remote session conf

--- a/kitty/session/remote.conf
+++ b/kitty/session/remote.conf
@@ -12,10 +12,10 @@ launch zsh
 new_tab pop4 (3cVW)
 launch zsh
 
-new_tab pop5
+new_tab pop5 (7Jcm)
 launch zsh
 
-new_tab pop6
+new_tab pop6 (AYJD)
 launch zsh
 
 new_tab kin1 (31fx)
@@ -28,4 +28,13 @@ new_tab kin3 (2k31)
 launch zsh
 
 new_tab kin4 (3cVW)
+launch zsh
+
+new_tab kin5 (spare)
+launch zsh
+
+new_tab kin6 (AYJD)
+launch zsh
+
+new_tab kin7 (7Jcm)
 launch zsh
