kitty: Reorders startup tabs

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -41,6 +41,41 @@ cd ~
 launch --title brooks.sol
 #kitten ssh brooks.sol
 
+new_tab kin1 (31fx)
+cd ~
+launch
+#kitten ssh kin1.sol
+
+new_tab kin2 (Edfk)
+cd ~
+launch
+#kitten ssh kin2.sol
+
+new_tab kin3 (2k31)
+cd ~
+launch
+#kitten ssh kin3.sol
+
+new_tab kin4 (3cVW)
+cd ~
+launch
+#kitten ssh kin4.sol
+
+new_tab kin5 (spare)
+cd ~
+launch
+#kitten ssh kin5.sol
+
+new_tab kin6
+cd ~
+launch
+#kitten ssh kin6.sol
+
+new_tab kin7
+cd ~
+launch
+#kitten ssh kin7.sol
+
 new_tab pop1 (31fx)
 cd ~
 launch
@@ -70,38 +105,3 @@ new_tab pop6 (AYJD)
 cd ~
 launch
 #kitten ssh pop6.sol
-
-new_tab kin1 (31fx)
-cd ~
-launch
-#kitten ssh kin1.sol
-
-new_tab kin2 (Edfk)
-cd ~
-launch
-#kitten ssh kin2.sol
-
-new_tab kin3 (2k31)
-cd ~
-launch
-#kitten ssh kin3.sol
-
-new_tab kin4 (3cVW)
-cd ~
-launch
-#kitten ssh kin4.sol
-
-new_tab kin5 (spare)
-cd ~
-launch
-#kitten ssh kin5.sol
-
-new_tab kin6 (AYJD)
-cd ~
-launch
-#kitten ssh kin6.sol
-
-new_tab kin7 (7Jcm)
-cd ~
-launch
-#kitten ssh kin7.sol
