kitty: updates startup.conf

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -21,12 +21,12 @@ new_tab core
 cd ~/src/solana/core
 launch
 
-new_tab v1.18
-cd ~/src/solana-v1.18
+new_tab v2.0
+cd ~/src/agave-2.0
 launch
 
-new_tab v1.17
-cd ~/src/solana-v1.17
+new_tab v1.18
+cd ~/src/solana-v1.18
 launch
 
 
@@ -38,70 +38,75 @@ launch
 new_os_window
 
 cd ~
-launch --title brooks.sol
-#kitten ssh brooks.sol
+launch --title brooks1
+#kitten ssh brooks1
+
+new_tab brooks2
+cd ~
+launch
+#kitten ssh brooks2
 
 new_tab kin1 (31fx)
 cd ~
 launch
-#kitten ssh kin1.sol
+#kitten ssh kin1
 
 new_tab kin2 (Edfk)
 cd ~
 launch
-#kitten ssh kin2.sol
+#kitten ssh kin2
 
 new_tab kin3 (2k31)
 cd ~
 launch
-#kitten ssh kin3.sol
+#kitten ssh kin3
 
 new_tab kin4 (3cVW)
 cd ~
 launch
-#kitten ssh kin4.sol
+#kitten ssh kin4
 
-new_tab kin5 (spare)
+new_tab kin5
 cd ~
 launch
-#kitten ssh kin5.sol
+#kitten ssh kin5
 
 new_tab kin6
 cd ~
 launch
-#kitten ssh kin6.sol
+#kitten ssh kin6
 
 new_tab kin7
 cd ~
 launch
-#kitten ssh kin7.sol
+#kitten ssh kin7
 
 new_tab pop1 (31fx)
 cd ~
 launch
-#kitten ssh pop1.sol
+#kitten ssh pop1
 
 new_tab pop2 (Edfk)
 cd ~
 launch
-#kitten ssh pop2.sol
+#kitten ssh pop2
 
 new_tab pop3 (2k31)
 cd ~
 launch
-#kitten ssh pop3.sol
+#kitten ssh pop3
 
 new_tab pop4 (3cVW)
 cd ~
 launch
-#kitten ssh pop4.sol
+#kitten ssh pop4
 
 new_tab pop5 (7Jcm)
 cd ~
 launch
-#kitten ssh pop5.sol
+#kitten ssh pop5
 
 new_tab pop6 (AYJD)
 cd ~
 launch
-#kitten ssh pop6.sol
+#kitten ssh pop6
