kitty: update startup for agave-v2.2

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -7,29 +7,43 @@ launch
 
 new_tab check
 cd ~/src/solana
-launch
+launch --hold ulimit -n unlimited
 
 new_tab accounts-db
 cd ~/src/solana/accounts-db
-launch
+launch --hold ulimit -n unlimited
 
 new_tab runtime
 cd ~/src/solana/runtime
-launch
+launch --hold ulimit -n unlimited
 
 new_tab core
 cd ~/src/solana/core
+launch --hold ulimit -n unlimited
+
+new_tab v2.2
+cd ~/src/agave-v2.2
+launch
+
+new_tab v2.1
+cd ~/src/agave-v2.1
 launch
 
 new_tab v2.0
-cd ~/src/agave-2.0
+cd ~/src/agave-v2.0
 launch
 
 new_tab v1.18
 cd ~/src/solana-v1.18
 launch
 
+new_tab devops
+cd ~/src/devops
+launch
 
+new_tab simd
+cd ~/src/solana-improvement-documents
+launch
 
 
 
@@ -38,70 +52,56 @@ launch
 new_os_window
 
 cd ~
-launch --title brooks1
-#kitten ssh brooks1
+launch --title brooks1 --hold kitten ssh brooks1.sol
 
 new_tab brooks2
 cd ~
-launch
-#kitten ssh brooks2
+launch --hold kitten ssh brooks2.sol
 
 new_tab kin1
 cd ~
-launch
-#kitten ssh kin1
+launch --hold kitten ssh kin1
 
 new_tab kin2
 cd ~
-launch
-#kitten ssh kin2
+launch --hold kitten ssh kin2
 
 new_tab kin3
 cd ~
-launch
-#kitten ssh kin3
+launch --hold kitten ssh kin3
 
 new_tab kin4
 cd ~
-launch
-#kitten ssh kin4
+launch --hold kitten ssh kin4
 
 new_tab kin5
 cd ~
-launch
-#kitten ssh kin5
+launch --hold kitten ssh kin5
 
 new_tab kin6
 cd ~
-launch
-#kitten ssh kin6
+launch --hold kitten ssh kin6
 
 new_tab pop1 (31fx)
 cd ~
-launch
-#kitten ssh pop1
+launch --hold kitten ssh pop1
 
 new_tab pop2 (Edfk)
 cd ~
-launch
-#kitten ssh pop2
+launch --hold kitten ssh pop2
 
 new_tab pop3 (2k31)
 cd ~
-launch
-#kitten ssh pop3
+launch --hold kitten ssh pop3
 
 new_tab pop4 (3cVW)
 cd ~
-launch
-#kitten ssh pop4
+launch --hold kitten ssh pop4
 
 new_tab pop5 (7Jcm)
 cd ~
-launch
-#kitten ssh pop5
+launch --hold kitten ssh pop5
 
 new_tab pop6 (AYJD)
 cd ~
-launch
-#kitten ssh pop6
+launch --hold kitten ssh pop6
