kitty: updates startup config

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -53,3 +53,11 @@ launch --title brooks1 --hold kitten ssh brooks1.sol
 new_tab brooks2
 cd ~
 launch --hold kitten ssh brooks2.sol
+
+new_tab dev18 (no disk index, edge)
+cd ~
+launch --hold kitten ssh shared-dev18
+
+new_tab dev10 (no disk index, beta)
+cd ~
+launch --hold kitten ssh shared-dev10
