kitty: updates session startup conf

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -38,7 +38,7 @@ cd ~/src/devops
 launch
 
 new_tab simd
-cd ~/src/solana-improvement-documents
+cd ~/src/simd
 launch
 
 
@@ -54,10 +54,14 @@ new_tab brooks2
 cd ~
 launch --hold kitten ssh brooks2.sol
 
-new_tab dev18 (no disk index, edge)
+new_tab dev1 (no disk index, edge)
+cd ~
+launch --hold kitten ssh shared-dev1
+
+new_tab dev18 (no disk index, beta)
 cd ~
 launch --hold kitten ssh shared-dev18
 
-new_tab dev10 (no disk index, beta)
+new_tab dev4 (no disk index, stable)
 cd ~
-launch --hold kitten ssh shared-dev10
+launch --hold kitten ssh shared-dev4
