kitty: updates startup.conf

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -48,20 +48,20 @@ launch
 new_os_window
 
 cd ~
-launch --title brooks1 --hold kitten ssh brooks1.sol
+launch --title brooks1
 
 new_tab brooks2
 cd ~
-launch --hold kitten ssh brooks2.sol
+launch
 
 new_tab dev1 (no disk index, edge)
 cd ~
-launch --hold kitten ssh shared-dev1
+launch
 
-new_tab dev18 (no disk index, beta)
+new_tab dev6 (no disk index, beta)
 cd ~
-launch --hold kitten ssh shared-dev18
+launch
 
 new_tab dev4 (no disk index, stable)
 cd ~
-launch --hold kitten ssh shared-dev4
+launch
