kitty: update startup session

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -41,6 +41,10 @@ new_tab simd
 cd ~/src/simd
 launch
 
+new_tab sdk
+cd ~/src/solana-sdk
+launch
+
 
 
 
@@ -49,10 +53,6 @@ new_os_window
 
 cd ~
 launch --title brooks1
-
-new_tab brooks2
-cd ~
-launch
 
 new_tab dev1 (no disk index, edge)
 cd ~
