kitty: updates startup session

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -21,12 +21,12 @@ new_tab core
 cd ~/src/solana/core
 launch --hold ulimit -n unlimited
 
-new_tab v3.0
-cd ~/src/agave-v3.0
+new_tab v3.1
+cd ~/src/agave-v3.1
 launch
 
-new_tab v2.3
-cd ~/src/agave-v2.3
+new_tab v3.0
+cd ~/src/agave-v3.0
 launch
 
 new_tab v1.18
@@ -54,14 +54,14 @@ new_os_window
 cd ~
 launch --title brooks1
 
+new_tab dev4 (disk index, edge)
+cd ~
+launch
+
 new_tab dev1 (no disk index, edge)
 cd ~
 launch
 
 new_tab dev6 (no disk index, beta)
-cd ~
-launch
-
-new_tab dev4 (no disk index, stable)
 cd ~
 launch
