kitty: updates startup session

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -54,14 +54,14 @@ new_os_window
 cd ~
 launch --title brooks1
 
-new_tab dev4 (disk index, edge)
+new_tab dev1 (disk index, v4.0)
 cd ~
 launch
 
-new_tab dev1 (no disk index, edge)
+new_tab dev4 (disk index, v3.1)
 cd ~
 launch
 
-new_tab dev6 (no disk index, beta)
+new_tab dev6 (no disk index, v3.0)
 cd ~
 launch
