kitty: startup session

--- a/kitty/session/startup.conf
+++ b/kitty/session/startup.conf
@@ -52,16 +52,20 @@ launch
 new_os_window
 
 cd ~
-launch --title brooks1
+launch --title brooks1 (v4.0, 50GB, restart 2hr, snap)
 
-new_tab dev1 (disk index, v4.0)
+new_tab dev1 (v4.0, 200GB, restart 2hr, snap)
 cd ~
 launch
 
-new_tab dev4 (disk index, v3.1)
+new_tab dev6 (v4.0, 100GB, restart 2hr, fastboot)
 cd ~
 launch
 
-new_tab dev6 (no disk index, v3.0)
+new_tab dev17 (v4.0, 25GB, restart 2hr, fastboot)
+cd ~
+launch
+
+new_tab dev4 (v4.0, minimal, restart 2hr, fastboot)
 cd ~
 launch
